k8s/graylog-virtualService.yaml
# virtualservice определяем правила маршрутизации
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: graylog
  namespace: logistic-package
spec:
  hosts:
    - "graylog.k3s.dev.com"
  gateways:
    - "logistic-package/gateway"
  http:
    - route:
        - destination:
            host: graylog.logistic-package.svc.cluster.local
            port:
              number: 9000
